FIx #1132: Fix word break in notification UI (#1133)
* Frontend: Fix word break in notification ui
	* Move notification override scss into notifictaion.scss from base.scss
	* Remove gulp-purify-css since no need to use this

* Fix missing line for csss compression in prod

--- a/frontend/src/css/modules/base.scss
+++ b/frontend/src/css/modules/base.scss
@@ -810,46 +810,3 @@ input {
         padding: 20px;
     }
 }
-
-// notification override
-.toast-message {
-    -ms-word-wrap: initial;
-    word-wrap: initial;
-    // text-align: center;
-    // font-size: 14px;
-}
-
-.toast-message a,
-.toast-message label {
-    color: #ffffff;
-}
-
-.toast-message a:hover {
-    color: #cccccc;
-    text-decoration: none;
-}
-
-.toast {
-    background-color: #030303;
-    word-break: initial;
-}
-
-.toast-success {
-    background-color: #51a351;
-}
-
-.toast-error {
-    background-color: #bd362f;
-}
-
-.toast-info {
-    background-color: #2f96b4;
-}
-
-.toast-wait {
-    background-color: #2f96b4;
-}
-
-.toast-warning {
-    background-color: #f89406;
-}
